 5-Aug-2021  - V1.18 Add FtpUtil() class to handle FTP server operations.
17-Aug-2021  - V1.19 Add sendContentType for postUnwrapped in UrlRequestUtil()
28-Aug-2021  - V1.20 Add minimum file size warning for mmCIF deserializer
 3-Sep-2021  - V1.21 Add FileLock() module
 8-Sep-2021  - V1.22 Add LogUtil() structured logging formatter module
16-Sep-2021  - V1.23 Add '.xz' file uncompression capability to FileUtil()
16-Sep-2021  - V1.24 Add support for zero copy http mmCIF access.
17-Sep-2021  - V1.25 Add explicit test for gzip compression in IoUtil.__deserializeXML()
17-Sep-2021  - V1.26 Fix protocol issue in remote FileUtil.exists() and size() methods
20-Sep-2021  - V1.27 Suppress logging of protocol errors in FileUtil()
21-Sep-2021  - V1.28 Protect against missing response headers in FileUtil.exists() and size() methods
21-Sep-2021  - V1.29 Add retry decorator for remote mmCIF deserialization method
27-Sep-2021  - V1.30 For Macos make the example multiprocessing test method a function (new serialization issues)
28-Sep-2021  - V1.31 Add diagnostic logging for FileUtil.exists/size methods for null locators
17-Oct-2021  - V1.32 Add local replace() method in FileUtil()
18-Mar-2022  - V1.33 Update replace() method in FileUtil() to return True when successful
28-Mar-2022  - V1.34 Resolve pylint issues
 6-Jun-2022  - V1.35 Resolve pylint issues in FastaUtil
 8-Sep-2022  - V1.36 Resolve pylint issues
 3-Oct-2022  - V1.37 Add options to UrlRequestUtil
 5-Dec-2022  - V1.38 Update UniProt fetching tests
23-Dec-2022  - V1.39 Configuration changes to support tox 4
13-Feb-2023  - V1.40 Resolve pylint issues
14-Mar-2023  - V1.41 Make 'timeout' parameter a keyword argument for instantiating FileUtil object
15-Mar-2023  - V1.42 Fix checking for remote branches by name in GitUtil()
 8-May-2023  - V1.43 Use allowed_methods instead of deprecated param in UrlRequestUtil()
15-May-2023  - V1.44 Update urllib3 requirements
19-May-2023  - V1.45 Update DNS to PDB archive