@@ -29,6 +29,7 @@
 #  18-Sep-2019  jdw add method deserializeCsvIter()
 #  17-Sep-2021  jdw add an explicit file test for gzip compression to avoid problems with uncompressed files.
 #  28-Mar-2022  dwp remove deprecated xml.etree.cElementTree module
+#   5-Dec-2023  dwp add support for BCIF serialization and deserialization
 ##
 
 __docformat__ = "google en"
@@ -58,16 +59,11 @@ import requests
 import ruamel.yaml
 import xml.etree.ElementTree as ET
 
-from mmcif.io.IoAdapterPy import IoAdapterPy
+from mmcif.io.IoAdapterPy import IoAdapterPy as IoAdapter
+from mmcif.api.DictionaryApi import DictionaryApi
 from rcsb.utils.io.decorators import retry
 from rcsb.utils.io.FastaUtil import FastaUtil
 from rcsb.utils.io.FileUtil import FileUtil
-
-
-try:
-    from mmcif.io.IoAdapterCore import IoAdapterCore as IoAdapter  # pylint: disable=ungrouped-imports
-except Exception:
-    from mmcif.io.IoAdapterPy import IoAdapterPy as IoAdapter  # pylint: disable=reimported,ungrouped-imports
 
 
 logger = logging.getLogger(__name__)
@@ -136,6 +132,7 @@ class JsonTypeEncoder(json.JSONEncoder):
 class IoUtil(object):
     def __init__(self, **kwargs):
         self.__fileU = FileUtil(**kwargs)
+        self.__pathPdbxDictFile = kwargs.get("pathPdbxDictFile", "https://raw.githubusercontent.com/wwpdb-dictionaries/mmcif_pdbx/master/dist/mmcif_pdbx_v5_next.dic")
 
     def serialize(self, filePath, myObj, fmt="pickle", **kwargs):
         """Public method to serialize format appropriate objects
@@ -157,6 +154,8 @@ class IoUtil(object):
             return ret
         if fmt in ["mmcif"]:
             ret = self.__serializeMmCif(filePath, myObj, **kwargs)
+        if fmt in ["bcif"]:
+            ret = self.__serializeBCif(filePath, myObj, **kwargs)
         elif fmt in ["json"]:
             ret = self.__serializeJson(filePath, myObj, **kwargs)
         elif fmt in ["pickle"]:
@@ -189,8 +188,8 @@ class IoUtil(object):
 
         """
         fmt = str(fmt).lower()
-        if fmt in ["mmcif"]:
-            ret = self.__deserializeMmCif(filePath, **kwargs)  # type: ignore
+        if fmt in ["mmcif", "bcif"]:
+            ret = self.__deserializeCif(filePath, fmt=fmt, **kwargs)  # type: ignore
         elif fmt in ["json"]:
             ret = self.__deserializeJson(filePath, **kwargs)  # type: ignore
         elif fmt in ["pickle"]:
@@ -409,7 +408,7 @@ class IoUtil(object):
         except Exception:
             return False
 
-    def __deserializeMmCif(self, locator, **kwargs):
+    def __deserializeCif(self, locator, fmt, **kwargs):
         """ """
         try:
             containerList = []
@@ -423,22 +422,22 @@ class IoUtil(object):
                 if minSize >= 0 and not self.__hasMinSize(locator, minSize):
                     logger.warning("Minimum file size not satisfied for: %r", locator)
                 myIo = IoAdapter(raiseExceptions=raiseExceptions, useCharRefs=useCharRefs)
-                containerList = myIo.readFile(locator, enforceAscii=enforceAscii, outDirPath=workPath)  # type: ignore
+                containerList = myIo.readFile(locator, enforceAscii=enforceAscii, outDirPath=workPath, fmt=fmt)  # type: ignore
             else:
-                # myIo = IoAdapterPy(raiseExceptions=raiseExceptions, useCharRefs=useCharRefs)
+                # myIo = IoAdapter(raiseExceptions=raiseExceptions, useCharRefs=useCharRefs)
                 # containerList = myIo.readFile(locator, enforceAscii=enforceAscii, outDirPath=workPath)
-                containerList = self.__deserializeMmCifRemote(locator, useCharRefs, enforceAscii, workPath)
+                containerList = self.__deserializeCifRemote(locator, useCharRefs, enforceAscii, workPath, fmt)
 
         except Exception as e:
             logger.error("Failing for %s with %s", locator, str(e))
         return containerList
 
     @retry((requests.exceptions.RequestException), maxAttempts=3, delaySeconds=1, multiplier=2, defaultValue=[], logger=logger)
-    def __deserializeMmCifRemote(self, locator, useCharRefs, enforceAscii, workPath):
+    def __deserializeCifRemote(self, locator, useCharRefs, enforceAscii, workPath, fmt):
         containerList = []
         try:
-            myIo = IoAdapterPy(raiseExceptions=True, useCharRefs=useCharRefs)
-            containerList = myIo.readFile(locator, enforceAscii=enforceAscii, outDirPath=workPath)
+            myIo = IoAdapter(raiseExceptions=True, useCharRefs=useCharRefs)
+            containerList = myIo.readFile(locator, enforceAscii=enforceAscii, outDirPath=workPath, fmt=fmt)
         except Exception as e:
             raise e
         return containerList
@@ -464,6 +463,50 @@ class IoUtil(object):
             logger.error("Failing for %s with %s", filePath, str(e))
         return ret
 
+    def __serializeBCif(self, filePath, containerList, **kwargs):
+        """ """
+        try:
+            ret = False
+            workPath = kwargs.get("workPath", None)
+            raiseExceptions = kwargs.get("raiseExceptions", True)
+            applyTypes = kwargs.get("applyTypes", True)
+            dictFilePath = kwargs.get("dictFilePath", self.__pathPdbxDictFile)
+            useFloat64 = kwargs.get("useFloat64", True)
+            useStringTypes = kwargs.get("useStringTypes", False)
+            copyInputData = kwargs.get("copyInputData", False)
+            #
+            myIo = IoAdapter(raiseExceptions=raiseExceptions)
+            dApiContainerList = myIo.readFile(inputFilePath=dictFilePath)
+            dApi = DictionaryApi(containerList=dApiContainerList, consolidate=True)
+            if filePath.endswith(".gz") and workPath:
+                rfn = "".join(random.choice(string.ascii_uppercase + string.digits) for _ in range(10))
+                tPath = os.path.join(workPath, rfn)
+                ret = myIo.writeFile(
+                    tPath,
+                    containerList=containerList,
+                    fmt="bcif",
+                    applyTypes=applyTypes,
+                    dictionaryApi=dApi,
+                    useFloat64=useFloat64,
+                    useStringTypes=useStringTypes,
+                    copyInputData=copyInputData
+                )
+                ret = self.__fileU.compress(tPath, filePath, compressType="gzip")
+            else:
+                ret = myIo.writeFile(
+                    filePath,
+                    containerList=containerList,
+                    fmt="bcif",
+                    applyTypes=applyTypes,
+                    dictionaryApi=dApi,
+                    useFloat64=useFloat64,
+                    useStringTypes=useStringTypes,
+                    copyInputData=copyInputData
+                )
+        except Exception as e:
+            logger.error("Failing for %s with %s", filePath, str(e))
+        return ret
+
     def __deserializeMmCifDict(self, filePath, **kwargs):
         """ """
         try:
@@ -473,7 +516,7 @@ class IoUtil(object):
             raiseExceptions = kwargs.get("raiseExceptions", True)
             useCharRefs = kwargs.get("useCharRefs", True)
             #
-            myIo = IoAdapterPy(raiseExceptions=raiseExceptions, useCharRefs=useCharRefs)
+            myIo = IoAdapter(raiseExceptions=raiseExceptions, useCharRefs=useCharRefs)
             containerList = myIo.readFile(filePath, enforceAscii=enforceAscii, outDirPath=workPath)
         except Exception as e:
             logger.error("Failing for %s with %s", filePath, str(e))
@@ -488,7 +531,7 @@ class IoUtil(object):
             raiseExceptions = kwargs.get("raiseExceptions", True)
             useCharRefs = kwargs.get("useCharRefs", True)
             #
-            myIo = IoAdapterPy(raiseExceptions=raiseExceptions, useCharRefs=useCharRefs)
+            myIo = IoAdapter(raiseExceptions=raiseExceptions, useCharRefs=useCharRefs)
             ret = myIo.writeFile(filePath, containerList=containerList, enforceAscii=enforceAscii)
         except Exception as e:
             logger.error("Failing for %s with %s", filePath, str(e))
