@@ -134,3 +134,4 @@
  8-May-2023  - V1.43 Use allowed_methods instead of deprecated param in UrlRequestUtil()
 15-May-2023  - V1.44 Update urllib3 requirements
 19-May-2023  - V1.45 Update DNS to PDB archive
+ 5-Dec-2023  - V1.46 Add BCIF import and export support to IoUtil and MarshalUtil
